--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "trigger_hotkey": "0x2",
     "base_delay": 0.01,
     "trigger_delay": 100,
-    "color_tolerance": 35,
+    "pixel_fov": 1,
     "always_enabled": false,
     "auto_counter_strafe": false
 }
